refactor: 코드 개선 - InputView 에서 당첨번호 구분자 상수로 분리 - TODO 주석 삭제