@@ -3,7 +3,6 @@ package lotto.view;
 import camp.nextstep.edu.missionutils.Console;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lotto.validator.BonusNumberValidator;
 import lotto.validator.LottoPriceValidator;
 import lotto.validator.WinningNumberValidator;
@@ -12,6 +11,8 @@ public class InputView {
     private static final String READ_LOTTO_PRICE_MESSAGE = "구입금액을 입력해 주세요.";
     private static final String READ_WINNING_NUMBER_MESSAGE = "당첨 번호를 입력해 주세요.";
     private static final String READ_BONUS_NUMBER_MESSAGE = "보너스 번호를 입력해 주세요.";
+
+    private static final String WINNING_NUMBER_DELIMETER = ",";
 
     //가격 입력받아서 가격을 리턴하고 구매할 로또
     public static int readLottoPrice() {
@@ -37,11 +38,13 @@ public class InputView {
         WinningNumberValidator.validateFormat(input);
 
         //변환
-        List<String> list = Arrays.asList(input.split(","));
+        List<String> list = Arrays.asList(input.split(WINNING_NUMBER_DELIMETER));
         //리스트 예외
         WinningNumberValidator.validateDuplicate(list);
 
-        return list.stream().map(s -> Integer.parseInt(s)).collect(Collectors.toList());
+        return list.stream()
+                .map(Integer::parseInt)
+                .toList();
     }
 
     public static int readBonusNumber(List<Integer> winNumbers) {
